[package]
name = "icp_token_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "25.0.1"  # Downgrade to a compatible version
dotenv = "0.15"

# Optional: explicitly specify compatible versions for bitvec and funty
bitvec = "1.0.1"
funty = "2.0.0"


